height set on tabs to prevent a full window scroll
height set on tabs to prevent a full window scrollbar

--- a/client/src/web/assets/css/app.less
+++ b/client/src/web/assets/css/app.less
@@ -208,6 +208,12 @@ small {
   color: rgba(255,255,255,0.6) !important;
 }
 
+.tabscroll
+{
+  max-height: 528px;
+  overflow-x: hidden;
+  overflow-y: scroll;
+}
 
 // Scrolbars
 ::-webkit-scrollbar {
